Completo lo del rol y sesiones
